legacy/differential_testing/regression_ts/gcc_reg_cb/results/gcc540/save_st/pr69819.c-5.4.0-0.out.txt
pr69819.c:5:5: error: ‘foo’ redeclared as different kind of symbol
 int foo[] = { 0 };  
     ^
pr69819.c:4:6: note: previous definition of ‘foo’ was here
 void foo () { }
      ^
